fix reveal button mobile

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -193,4 +193,7 @@ a img:hover{
     margin-bottom: 2rem;
     padding-bottom: 2rem;
   }
+  .logo p{
+    width: 50%;
+  }
 }
